crates/squealy-macros/tests/compile_fail/nullable_attribute_removed.stderr
error: `#[column(nullable)]` was removed: declare nullability in the column type instead (`C::Type<'scope, Option<T>>` for a nullable column, `C::Type<'scope, T>` otherwise)
 --> tests/compile_fail/nullable_attribute_removed.rs:4:10
  |
4 | #[derive(Table)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
